<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.dali.didor.MainActivity" >

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layer_tab_border"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbReminder"
            style="@style/TabButton"
            android:checked="true"
            android:drawableTop="@drawable/selector_tab_reminder"
            android:text="@string/main_tab_reminder" />

        <RadioButton
            android:id="@+id/rbContacts"
            style="@style/TabButton"
            android:drawableTop="@drawable/selector_tab_contacts"
            android:text="@string/main_tab_contacts" />

        <RadioButton
            android:id="@+id/rbDiscover"
            style="@style/TabButton"
            android:drawableTop="@drawable/selector_tab_discover"
            android:text="@string/main_tab_discover" />

        <RadioButton
            android:id="@+id/rbMe"
            style="@style/TabButton"
            android:drawableTop="@drawable/selector_tab_me"
            android:text="@string/main_tab_me" />
    </RadioGroup>

</LinearLayout>